--- a/less/main/general/base.less
+++ b/less/main/general/base.less
@@ -2,5 +2,5 @@
 metisAdmin: Base
 ========================================================================== */
 body {
-  .transition(all .3s ease-in-out);
+  transition: all .3s ease-in-out;
 }
