--- a/less/main/general/top.less
+++ b/less/main/general/top.less
@@ -1,5 +1,5 @@
 /* BEGIN TOP bar */
-#top {
+.Top {
   .navbar {
     margin-bottom: 0;
     border-top: 3px solid #CD0067;
@@ -7,10 +7,10 @@
   .navbar-brand {
     padding: 0;
   }
-  .topnav {
+  .Top-nav {
     margin: 10px 0;
     text-align: right;
-    @media (min-width: @screen-tablet) {
+    @media (min-width: 768px) {
       float: right;
     }
   }
