--- a/less/main/layout/sticky.less
+++ b/less/main/layout/sticky.less
@@ -10,7 +10,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: @footerheight;
 }
-.Footer, #footer {
+.Footer {
   position: absolute;
   bottom: 0;
   width: 100%;
