--- a/less/main/general/head.less
+++ b/less/main/general/head.less
@@ -1,71 +1,64 @@
 /* BEGIN header.head bar */
-.head {
+.Head {
 
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.05) inset;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
-  
-  .search-bar {
-    margin: 0 auto;
-    padding: 10px 15px;
+}
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    .box-shadow(0 1px 0 rgba(255, 255, 255, 0.05));
+.Head-search {
+  margin: 0 auto;
+  padding: 10px 15px;
 
-    .main-search {
-      border-bottom: 1px solid #7c7c7c;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05);
 
-      input[type="text"] {
-        background-color: transparent;
-        border-color: transparent;
-        color: #ccc;
-        .box-shadow(none);
-      }
-      button, input[type=submit] {
-        background: transparent;
-        border: transparent;
-      }
-    }
-    @media (min-width: @screen-tablet) {
-      border-bottom-width: 0;
-      border-right: 1px solid rgba(0, 0, 0, 0.3);
-      .box-shadow(-1px 0px 0px rgba(255, 255, 255, 0.05) inset);
-      .side-right & {
-        border-right-width: 0;
-        border-left: 1px solid rgba(0, 0, 0, 0.3);
-        .box-shadow(1px 0px 0px rgba(255, 255, 255, 0.05) inset);
-      }
 
-    }
+  @media (min-width: 768px) {
+    border-bottom-width: 0;
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow:-1px 0px 0px rgba(255, 255, 255, 0.05) inset;
   }
-  .main-bar {
-    padding: 10px;
-    h3 {
-      margin-top: 0;
-      margin-bottom: 0;
-      color: #bababa;
-      @media (min-width: @screen-tablet) {
-        margin-top: 5px;
-      }
+}
+
+.Head-searchForm {
+  border-bottom: 1px solid #7c7c7c;
+
+  input[type="text"] {
+    background-color: transparent;
+    border-color: transparent;
+    color: #ccc;
+    box-shadow:none;
+  }
+  button, input[type=submit] {
+    background: transparent;
+    border: transparent;
+  }
+}
+
+.Head-main {
+  padding: 10px;
+  h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #bababa;
+    @media (min-width: 768px) {
+      margin-top: 5px;
     }
   }
 }
 
-@media (min-width: @screen-tablet) {
-  .head .search-bar .main-search {
+@media (min-width: 768px) {
+  .Head-searchForm {
     margin-right: auto;
   }
 }
 
 
-@media (min-width: @screen-tablet) {
-  .search-bar {
+@media (min-width: 768px) {
+  .Head-search {
     //width: @miniSidebarWidth;
     float: left;
-
-    .side-right & {
-      float: right;
-    }
     padding: 10px 4px;
 
     .input-small.form-control {
@@ -74,14 +67,14 @@
 
   }
 
-  .main-bar {
+  .Head-main {
     display: block;
     overflow: hidden;
   }
 }
 
-@media (min-width: @screen-desktop) {
-  .search-bar {
+@media (min-width: 992px) {
+  .Head-search {
     width: @SidebarWidth;
     padding: 10px 15px;
     .input-group-btn {
